5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4143/executions/1637_1053.log
== TEST (2019-04-09 10:23:29) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = input("nome do patrono:")
if (a == "cervo")
	mgs = "cervo eh patrono do Harry Potter"
else: 
	mgs = a + "nao eh patrono do Harry Potter"
	
print(mgs)
-- ERROR:
File "XXXX", line 5
    if (a == "cervo")
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:23:39) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = input("nome do patrono:")
if (a == "cervo"):
	mgs = "cervo eh patrono do Harry Potter"
else: 
	mgs = a + "nao eh patrono do Harry Potter"
	
print(mgs)
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:24:15) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = input("nome do patrono:")
if (a == "cervo"):
	mgs = "cervo eh patrono do Harry Potter"
else: 
	mgs = a + " " "nao eh patrono do Harry Potter"
	
print(mgs)
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:24:24) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = input("nome do patrono:")
if (a == "cervo"):
	mgs = "cervo eh patrono do Harry Potter"
else: 
	mgs = a + " " "nao eh patrono do Harry Potter"
	
print(mgs)
-- EXECUTION TIME:
0.16701
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
